2004-04-15  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkmessagedialog.xml (set_markup) Add description of this
	PyGTK 2.4 method.

	* pygtk-gtknotebook.xml (get_n_pages) Add description.
	Add GTK+2.4 style properties
	Add return value description for "focus-tab" and "select-page"
	signals.

	* pygtk-gtkoptionmenu.xml Added deprecation warning for PyGTK 2.4

	* pygtk-gtkpaned.xml (get_child1) (get_child2) Add descriptions of
	these PyGTK 2.4 methods.
	("max-position") ("min-position") Add descriptions of these GTK+ 2.4
	properties.
	("resize") ("shrink") Add descriptions of these GTK+ 2.4 child
	properties.
	Add return value description for signals.

	* pygtk-gtkplug.xml (gtk.plug_new_for_display) Add description.
	(construct) Add warning - method not available since PyGTK 2.2

	* pygtk-gtkradioaction.xml Add.

	* pygtk-gtkradiobutton.xml Add description of "group-changed" signal
	for GTK+ 2.4

	* pygtk-gtkradiomenuitem.xml Add description of "group-changed" signal
	for GTK+ 2.4

	* pygtk-gtkradioaction.xml Fix description of "group" property.

	* pugtk-gtkradiotoolbutton.xml Add.

	* pygtk-gtkrange.xml Reorder property descriptions.

	* pygtk-gtkrcstyle.xml Add gtk.rc_reset_style() function for PyGTK 2.4

	* pygtk-gtkscale.xml (get_layout) (get_layout_offsets) Add
	descriptions for PyGTK 2.4

	* pygtk-gtkscrollbar.xml Reorder property descriptions.

	* pygtk-gtkscrolledwindow.xml Add "scrollbar-spacing" style property
	available in GTK+ 2.2

	* pygtk_gtkselectiondata.xml Add function description of
	gtk.selection_owner_set_for_display().

	* pygtk_gtkseparatortoolitem.xml Add. Add purpose description

	* pygtk-gtksettings.xml (gtk.settings_get_for_screen) Add description.
	Add various properties for GTK+ 2.2 and 2.4

2004-04-14  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkiconsource.xml Add gtk.icon_size_lookup_for_settings()
	function.

	* pygtk-gdkpixmap.xml Fix description and parameter list of 
	gtk.pixmap_create_from_data() function.
