@@ -274,10 +274,19 @@ method</simpara></listitem>
 	  <listitem><simpara>additional user parameters (if
 any)</simpara></listitem>
 	</varlistentry>
+	<varlistentry>
+	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
+	  <listitem><simpara><literal>TRUE</literal> if the <link
+	  linkend="class-gtksocket"><classname>gtk.Socket</classname></link>
+	  should not be destroyed.</simpara></listitem>
+	</varlistentry>
       </variablelist>
 
       <para>The "plug-removed" signal is emitted when a plug is removed from
-the socket.</para>
+the socket. The default action is to destroy the <link
+linkend="class-gtksocket"><classname>gtk.Socket</classname></link> widget,
+so if you want to reuse it you must add a signal handler that returns
+<literal>TRUE</literal>.</para>
 
     </refsect2>
 
