@@ -1,3 +1,8 @@
+2004-04-16  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtksocket.xml ("plug-removed") Add return value description
+	for this signal handler.
+
 2004-04-15  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkmessagedialog.xml (set_markup) Add description of this
